--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,12 +11,13 @@
         android:id="@+id/menu_btn_logIn"
         android:layout_width="340dp"
         android:layout_height="60dp"
-        android:layout_marginTop="512dp"
+        android:layout_marginTop="496dp"
         android:backgroundTint="@color/blue_botton"
-        app:cornerRadius="8dp"
         android:text="@string/menu_login"
         android:textStyle="bold"
+        app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,10 +32,10 @@
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_btn_logIn"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.882"
         app:strokeColor="@color/yolo_blue"
         app:strokeWidth="2dp" />
 
@@ -42,9 +43,9 @@
         android:id="@+id/logoMenu"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        app:layout_constraintBottom_toTopOf="@+id/menu_btn_logIn"
+        android:layout_marginTop="156dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu_img_logo" />
