--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -114,35 +114,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.949" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        style="@style/Widget.AppCompat.Light.ListView.DropDown"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="41dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn_continuar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <AutoCompleteTextView
-
-            android:id="@+id/sign_up_editText_profession"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/white"
-            android:hint="@string/sign_up_profession_ph"
-            android:inputType="none"
-            android:paddingStart="20dp"
-            android:textColor="@color/grey_placeholders"
-            android:textSize="15sp"
-            tools:ignore="RtlSymmetry" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <EditText
         android:id="@+id/sign_up_editText_date"
         android:layout_width="340dp"
@@ -163,6 +134,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlSymmetry" />
+
+    <RadioGroup
+        android:id="@+id/sign_up_RadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/signup_radioButton_student"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Estudiante" />
+
+        <RadioButton
+            android:id="@+id/signup_radioButton_professor"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:text="Profesor" />
+    </RadioGroup>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
